fix boarding pass ticket numbers

--- a/starter/sample_submission/step_2/boarding-pass/boarding-pass-notebook.ipynb
+++ b/starter/sample_submission/step_2/boarding-pass/boarding-pass-notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainingDataUrl = \"https://udacitystoragetest.blob.core.windows.net/boarding-pass?sp=racwdli&st=2022-11-22T00:00:13Z&se=2022-11-22T08:00:13Z&spr=https&sv=2021-06-08&sr=c&sig=NBxiXqOrcxbAOa9jeu27jNboaaeAaPPn7TbUHY8HNm8%3D\""
+    "trainingDataUrl = \"https://udacitystoragetest.blob.core.windows.net/boarding-pass?sp=racwdli&st=2022-11-26T18:52:36Z&se=2022-11-27T02:52:36Z&spr=https&sv=2021-06-08&sr=c&sig=3RStA3cmaE%2Bz%2FDBrOPstd2FcVzIU%2BGPRU%2FahBkaw4TA%3D\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "'ready'"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 11, 22, 1, 55, 29, tzinfo=<isodate.tzinfo.Utc object at 0x7fcbf23ef3c8>)"
+       "datetime.datetime(2022, 11, 26, 18, 52, 54, tzinfo=<isodate.tzinfo.Utc object at 0x7f4239a8c0b8>)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        " TrainingDocumentInfo(name=boarding-wayne-cushing.pdf, status=succeeded, page_count=1, errors=[], model_id=None)]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,25 +163,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_test_url = [\"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-avkash.pdf?sp=r&st=2022-11-22T01:50:48Z&se=2022-11-22T09:50:48Z&spr=https&sv=2021-06-08&sr=b&sig=IoPNIchvAbZs2VnfvOgIeUlvlkqe5zGf0LUZ%2FPIjAe0%3D\"]\n",
     "\n",
     "test_urls = [\n",
-    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-avkash.pdf?sp=r&st=2022-11-22T01:50:48Z&se=2022-11-22T09:50:48Z&spr=https&sv=2021-06-08&sr=b&sig=IoPNIchvAbZs2VnfvOgIeUlvlkqe5zGf0LUZ%2FPIjAe0%3D\",\n",
-    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-james-webb.pdf?sp=r&st=2022-11-22T01:51:36Z&se=2022-11-22T09:51:36Z&spr=https&sv=2021-06-08&sr=b&sig=%2B%2Fdoe0unKKisr7xLxpC%2FN8z2KdAirU%2FfyzBYLfgV28g%3D\",\n",
-    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-james.pdf?sp=r&st=2022-11-22T01:51:50Z&se=2022-11-22T09:51:50Z&spr=https&sv=2021-06-08&sr=b&sig=ZlG9tOB9f%2BuN4BPj%2FO3SEmO7hTS2EhUi8MCeMJnZmzs%3D\",\n",
-    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-libby.pdf?sp=r&st=2022-11-22T01:52:29Z&se=2022-11-22T09:52:29Z&spr=https&sv=2021-06-08&sr=b&sig=DZL7nwpa7X5cCMwz5gM6syji2MJOnD6kKmbbvFe2TuU%3D\",\n",
-    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-radha-s-kumar.pdf?sp=r&st=2022-11-22T01:52:40Z&se=2022-11-22T09:52:40Z&spr=https&sv=2021-06-08&sr=b&sig=a3z7stDmYZ5MTwq5YGUp%2FLVVM4GFH455v2qxv6ykoxU%3D\",\n",
-    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-sameer.pdf?sp=r&st=2022-11-22T01:52:57Z&se=2022-11-22T09:52:57Z&spr=https&sv=2021-06-08&sr=b&sig=KpekKK02YfxjlTpuuNoQj0xf3vjaXgUcNWxOC3hFDbg%3D\"\n",
+    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-avkash.pdf?sp=r&st=2022-11-26T18:53:12Z&se=2022-11-27T02:53:12Z&spr=https&sv=2021-06-08&sr=b&sig=f4pmABGdt%2F%2B0HX3%2F9fIKMaJLTO9kVeYtZ%2FT%2BFwr4pUE%3D\",\n",
+    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-james-webb.pdf?sp=r&st=2022-11-26T18:53:29Z&se=2022-11-27T02:53:29Z&spr=https&sv=2021-06-08&sr=b&sig=Aicyi3t4802c2Ziv4T9wVLZgLMlmsdKNxxbleS%2BBrhQ%3D\",\n",
+    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-james.pdf?sp=r&st=2022-11-26T18:53:41Z&se=2022-11-27T02:53:41Z&spr=https&sv=2021-06-08&sr=b&sig=JmqgYqVkv0Ho%2F%2FiCb5pyIzNGXNi2J4aZdHQE6hzDA7M%3D\",\n",
+    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-libby.pdf?sp=r&st=2022-11-26T18:53:54Z&se=2022-11-27T02:53:54Z&spr=https&sv=2021-06-08&sr=b&sig=5hjUaq18RoadW86MHiW522pSBh%2FdcjKJ%2Buq8DJZgPcQ%3D\",\n",
+    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-radha-s-kumar.pdf?sp=r&st=2022-11-26T18:54:22Z&se=2022-11-27T02:54:22Z&spr=https&sv=2021-06-08&sr=b&sig=xnv%2FEGBbwa3ldpqCG5umIXrv3Xlmi7MfX%2FXZrQ4hh%2FQ%3D\",\n",
+    "    \"https://udacitystoragetest.blob.core.windows.net/test-boarding-pass/boarding-sameer.pdf?sp=r&st=2022-11-26T18:54:33Z&se=2022-11-27T02:54:33Z&spr=https&sv=2021-06-08&sr=b&sig=lUbrd5gcrzlm7Nso73SHcqQaKAuozOCLmafqo1VIvJU%3D\"\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,91 +209,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Form type: custom:eda50ed5-d0d0-430d-8f91-546d491d184b\n",
-      "Label 'Seat' has value '20A' and a confidence score of 0.99\n",
-      "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
-      "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
-      "Label 'PassengerName' has value 'Avkash Chauhan' and a confidence score of 0.99\n",
+      "Form type: custom:3ea1cb18-a0e3-4f4f-866b-720c05c8f581\n",
+      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
+      "Label 'Class' has value 'E' and a confidence score of 0.994\n",
       "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
       "Label 'Boarding Pass ID' has value 'ETK-34236751E' and a confidence score of 0.99\n",
       "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
       "Label 'Destination' has value 'Chicago' and a confidence score of 0.99\n",
-      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
-      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
-      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
-      "Label 'Class' has value 'E' and a confidence score of 0.994\n",
-      "Form type: custom:eda50ed5-d0d0-430d-8f91-546d491d184b\n",
-      "Label 'Destination' has value 'Chicago' and a confidence score of 0.991\n",
-      "Label 'Seat' has value '1A' and a confidence score of 0.99\n",
-      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
-      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
+      "Label 'PassengerName' has value 'Avkash Chauhan' and a confidence score of 0.99\n",
       "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
-      "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
+      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
+      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
       "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
+      "Label 'Seat' has value '20A' and a confidence score of 0.99\n",
+      "Form type: custom:3ea1cb18-a0e3-4f4f-866b-720c05c8f581\n",
+      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
+      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
+      "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
+      "Label 'Boarding Pass ID' has value 'ETK-34236748E' and a confidence score of 0.99\n",
+      "Label 'Seat' has value '1A' and a confidence score of 0.99\n",
       "Label 'PassengerName' has value 'James Webb' and a confidence score of 0.99\n",
       "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
-      "Label 'Boarding Pass ID' has value 'ETK-34236751E' and a confidence score of 0.99\n",
+      "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
       "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
       "Label 'Class' has value 'E' and a confidence score of 0.994\n",
-      "Form type: custom:eda50ed5-d0d0-430d-8f91-546d491d184b\n",
-      "Label 'PassengerName' has value 'James Jackson' and a confidence score of 0.991\n",
-      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
-      "Label 'Boarding Pass ID' has value 'ETK-34236751E' and a confidence score of 0.99\n",
-      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
-      "Label 'Destination' has value 'Chicago' and a confidence score of 0.991\n",
       "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
-      "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
-      "Label 'Class' has value 'E' and a confidence score of 0.994\n",
+      "Label 'Destination' has value 'Chicago' and a confidence score of 0.991\n",
+      "Form type: custom:3ea1cb18-a0e3-4f4f-866b-720c05c8f581\n",
+      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
       "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
+      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
       "Label 'Seat' has value '25B' and a confidence score of 0.99\n",
-      "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
-      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
-      "Form type: custom:eda50ed5-d0d0-430d-8f91-546d491d184b\n",
+      "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
       "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
-      "Label 'Seat' has value '3D' and a confidence score of 0.99\n",
+      "Label 'Class' has value 'E' and a confidence score of 0.994\n",
+      "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
+      "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
       "Label 'Destination' has value 'Chicago' and a confidence score of 0.991\n",
+      "Label 'Boarding Pass ID' has value 'ETK-34236750E' and a confidence score of 0.99\n",
+      "Label 'PassengerName' has value 'James Jackson' and a confidence score of 0.991\n",
+      "Form type: custom:3ea1cb18-a0e3-4f4f-866b-720c05c8f581\n",
+      "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
+      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
+      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
+      "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
+      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
+      "Label 'Seat' has value '3D' and a confidence score of 0.99\n",
       "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
       "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
-      "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
-      "Label 'Class' has value 'B' and a confidence score of 0.994\n",
-      "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
-      "Label 'Boarding Pass ID' has value 'ETK-34236749B' and a confidence score of 0.99\n",
       "Label 'PassengerName' has value 'Libby Herold' and a confidence score of 0.99\n",
-      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
-      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
-      "Form type: custom:eda50ed5-d0d0-430d-8f91-546d491d184b\n",
-      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
+      "Label 'Destination' has value 'Chicago' and a confidence score of 0.991\n",
+      "Label 'Class' has value 'B' and a confidence score of 0.994\n",
+      "Label 'Boarding Pass ID' has value 'ETK-34236749E' and a confidence score of 0.99\n",
+      "Form type: custom:3ea1cb18-a0e3-4f4f-866b-720c05c8f581\n",
+      "Label 'Boarding Pass ID' has value 'ETK-34236747E' and a confidence score of 0.99\n",
+      "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
       "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
-      "Label 'Boarding Pass ID' has value 'ETK-34236751E' and a confidence score of 0.99\n",
       "Label 'Destination' has value 'Chicago' and a confidence score of 0.99\n",
       "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
-      "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
-      "Label 'PassengerName' has value 'Radha S Kumar' and a confidence score of 0.99\n",
-      "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
-      "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
-      "Label 'Class' has value 'E' and a confidence score of 0.994\n",
-      "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
       "Label 'Seat' has value '34B' and a confidence score of 0.99\n",
-      "Form type: custom:eda50ed5-d0d0-430d-8f91-546d491d184b\n",
-      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
-      "Label 'Seat' has value '34A' and a confidence score of 0.99\n",
-      "Label 'Destination' has value 'Chicago' and a confidence score of 0.99\n",
-      "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
       "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
+      "Label 'Class' has value 'E' and a confidence score of 0.994\n",
+      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
       "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
+      "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
+      "Label 'PassengerName' has value 'Radha S. Kumar' and a confidence score of 0.99\n",
+      "Form type: custom:3ea1cb18-a0e3-4f4f-866b-720c05c8f581\n",
+      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
+      "Label 'Carrier' has value 'UA' and a confidence score of 0.993\n",
+      "Label 'Bag' has value 'YES' and a confidence score of 0.994\n",
+      "Label 'Boarding Pass ID' has value 'ETK-34236748E' and a confidence score of 0.99\n",
+      "Label 'Seat' has value '34A' and a confidence score of 0.99\n",
+      "Label 'PassengerName' has value 'Sameer Kumar' and a confidence score of 0.99\n",
+      "Label 'Flight Number' has value '234' and a confidence score of 0.995\n",
+      "Label 'Departure Location' has value 'San Francisco' and a confidence score of 0.99\n",
+      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n",
       "Label 'Class' has value 'E' and a confidence score of 0.994\n",
       "Label 'Date' has value 'April 20, 2022' and a confidence score of 0.99\n",
-      "Label 'Boarding Pass ID' has value 'ETK-34236751E' and a confidence score of 0.99\n",
-      "Label 'PassengerName' has value 'Sameer Kumar' and a confidence score of 0.99\n",
-      "Label 'Gate' has value 'G1' and a confidence score of 0.99\n",
-      "Label 'Boarding Time' has value '10:00 AM PST' and a confidence score of 0.99\n"
+      "Label 'Destination' has value 'Chicago' and a confidence score of 0.99\n"
      ]
     }
    ],
